# AIYA-Jetson

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/cuda/: cudaAlphaBlend.cuh  cudaBayer.cpp  cudaBayer.h  cudaColormap.cu  cudaColormap.h  cudaColorspace.cpp  cudaColorspace.h  cudaCrop.cu  cudaCrop.h  cudaDraw.cu  cudaDraw.h  cudaFilterMode.cu  cudaFilterMode.cuh  cudaFilterMode.h  cudaFont.cu  cudaFont.h  cudaGrayscale.cu  cudaGrayscale.h  cudaMappedMemory.h  cudaMath.h  cudaNormalize.cu  cudaNormalize.h  cudaOverlay.cu  cudaOverlay.h  cudaPointCloud.cpp  cudaPointCloud.cu  cudaPointCloud.h  cudaRGB.cu  cudaRGB.h  cudaResize.cu  cudaResize.h  cudaUtility.h  cudaVector.h  cudaWarp-affine.cu  cudaWarp-fisheye.cu  cudaWarp-intrinsic.cu  cudaWarp.h  cudaYUV-NV12.cu  cudaYUV-YUYV.cu  cudaYUV-YV12.cu  (+1 more)
cpp/include/: aiya_jetson.h
cpp/include/camera/: gstCamera.h  v4l2Camera.h
cpp/include/codec/: gstBufferManager.h  gstDecoder.h  gstEncoder.h  gstUtility.h  gstWebRTC.h  nvbuf_utils.h
cpp/include/detection/: yolov8.h
cpp/include/display/: glBuffer.h  glCamera.h  glDisplay.h  glEvents.h  glTexture.h  glUtility.h  glWidget.h
cpp/include/image/: imageFormat.h  imageFormat.inl  imageIO.h  imageLoader.h  imageWriter.h
cpp/include/math/: alphanum.h  mat33.h  rand.h  timespec.h
cpp/include/network/: Endian.h  IPv4.h  IPv6.h  Networking.h  RTSPServer.h  Socket.h  URI.h  WebRTCServer.h
cpp/include/parsers/: commandLine.h  csvReader.h  csvReader.hpp  csvWriter.h  csvWriter.hpp  filesystem.h  logging.h
cpp/include/tensorrt/: randInt8Calibrator.h  tensorConvert.h  tensorNet.h
cpp/include/threads/: Event.h  Event.inl  Mutex.h  Mutex.inl  Process.h  RingBuffer.h  RingBuffer.inl  Thread.h
cpp/include/tracking/: objectTracker.h  objectTrackerIOU.h  objectTrackerKLT.h
cpp/include/video/: videoOptions.h  videoOutput.h  videoSource.h
cpp/src/: aiya_jetson.cpp  main.cpp
cpp/src/camera/: gstCamera.cpp  v4l2Camera.cpp
cpp/src/codec/: gstBufferManager.cpp  gstDecoder.cpp  gstEncoder.cpp  gstUtility.cpp  gstWebRTC.cpp
cpp/src/detection/: yolov8.cpp  yolov8.cu
cpp/src/display/: glBuffer.cpp  glCamera.cpp  glDisplay.cpp  glEvents.cpp  glTexture.cpp  glWidget.cpp
cpp/src/image/: imageIO.cpp  imageLoader.cpp  imageWriter.cpp
cpp/src/network/: IPv4.cpp  IPv6.cpp  Networking.cpp  Socket.cpp  URI.cpp  WebRTCServer.cpp
cpp/src/parsers/: commandLine.cpp  filesystem.cpp  logging.cpp  xml.cpp
cpp/src/tensorrt/: tensorConvert.cu  tensorNet.cpp
cpp/src/threads/: Process.cpp  Thread.cpp
cpp/src/tracking/: objectTracker.cpp  objectTrackerIOU.cpp  objectTrackerKLT.cpp
cpp/src/video/: videoOptions.cpp  videoOutput.cpp  videoSource.cpp
